# soft20

./: CMakeLists.txt  CMakeLists.txt.fftw0  README  README.md  package.xml
include/soft20/: FFTcode.h  FST_semi_memo.h  OURmods.h  OURperms.h  complex.h  cospmls.h  csecond.h  fft_grids.h  fft_grids_so3.h  indextables.h  legendreTransforms.h  makeWigner.h  makeweights.h  newFCT.h  oddweights.h  permroots.h  rotate_so3.h  rotate_so3_fftw.h  rotate_so3_mem.h  rotate_so3_utils.h  s2_cospmls.h  s2_legendreTransforms.h~  s2_primitive.h  s2_semi_fly.h  s2_semi_memo.h  so3_correlate_fftw.h~  so3_correlate_sym.h  soft.h  soft_fftw.h  soft_fftw_nt.h  soft_fftw_pc.h  soft_sym.h  utils_so3.h  utils_vec_cx.h  weights.h  weights.h~  wignerTransforms.h  wignerTransforms_fftw.h  wignerTransforms_sym.h  wrap.h  (+2 more)
